# subsc

./: .gitignore  README.md  pyproject.toml  requirements.txt  wsgi.py
app/: __init__.py  config.py
app/blueprints/api/: routes.py  schemas.py
app/blueprints/auth/: forms.py  models.py  routes.py
app/blueprints/blog/: __init__.py  models.py  routes.py
app/data/: seed_data.json
app/extensions/: login.py
app/main/: app.py
app/models/: post.py  user.py
app/services/: post_service.py  user_service.py
app/static/css/: style.css
app/templates/: base.html
app/templates/auth/: login.html  register.html
app/templates/blog/: create_post.html  edit_post.html  index.html  post_detail.html
app/utils/: seed.py
instance/: app.db
tests/: test_config.py
