[project]
name = "subsc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "email-validator>=2.3.0",
    "flask>=3.1.2",
    "flask-caching>=2.3.1",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "marshmallow>=4.1.0",
    "mypy>=1.18.2",
    "pytest>=9.0.1",
    "ruff>=0.14.6",
    "sqlalchemy>=2.0.44",
]
